# gpu-cluster-acceptance

./: .pre-commit-config.yaml  Dockerfile.amd64  Dockerfile.arm64  README.md  Repo_Layout.txt  pyproject.toml  run.sh  setup.cfg
.github/workflows/: build-push.yml  cluster-check.yml  reuse.yml
.reuse/: dep5
configs/: expected.yaml
configs/dcgm/: diag.conf
configs/fio/: rand-read.fio  rand-write.fio  seq-read.fio  seq-write.fio
dockerfiles/: 2_flash_attention.build.sh  Dockerfile.flash-attention.amd64
scripts/: 00_env_probe.sh  01_cuda_probe.py  02_nccl_probe.sh  03_dcgm_diag.sh  04_nvlink_matrix.sh  05.1_gpu_burn.sh  05_infiniband_probe.sh  06_nccl_multinode.sbatch  07_fio.sh  08_train_fsdp_lora.py  fetch_license.sh
slurm/: env.example  train.sbatch
training/: dataset_stub.py  fsdp_utils.py  lora_cfg.yaml
